--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -7,6 +7,7 @@ slow_query:
       connection_id: Connection ID
       connection_id_tooltip: Unique ID of the SQL connection
       sql: SQL
+      sql_tooltip: SQL
       timestamp: Finish Time
       timestamp_tooltip: The time this SQL finished execution
       query_time: Latency
@@ -31,9 +32,12 @@ slow_query:
       db_tooltip: The database used to execute the SQL
 
       parse_time: Parse Time
+      parse_time_tooltip: Parse Time
       compile_time: Compile Time
+      compile_time_tooltip: Compile Time
       wait_time: Coprocessor Wait Time
       process_time: Coprocessor Process Time
+      process_time_tooltip: Coprocessor Process Time
       backoff_time: Backoff Time
       backoff_time_tooltip: The waiting time before retry when a statement encounters errors that require a retry
       get_commit_ts_time: Get Commit Ts Time
