--- a/ui/lib/apps/SlowQuery/translations/zh-CN.yaml
+++ b/ui/lib/apps/SlowQuery/translations/zh-CN.yaml
@@ -7,9 +7,13 @@ slow_query:
       connection_id: 连接号
       connection_id_tooltip: SQL 客户端连接 ID
       sql: SQL
+      sql_tooltip: SQL
       timestamp: 结束运行时间
+      timestamp_tooltip: 该 SQL 结束运行时的时间
       query_time: 总执行时间
+      query_time_tooltip: 该 SQL 总的执行时间
       memory_max: 最大内存
+      memory_max_tooltip: 该 SQL 执行时占用的最大内存空间
       digest: SQL 模板 ID
       digest_tooltip: SQL 模板的唯一标识（SQL 指纹）
       is_internal: 是否为内部 SQL
@@ -26,9 +30,12 @@ slow_query:
       db_tooltip: 执行该 SQL 时使用的数据库名称
 
       parse_time: 解析耗时
+      parse_time_tooltip: 解析该 SQL 的耗时
       compile_time: 优化耗时
+      compile_time_tooltip: 优化该 SQL 的耗时
       wait_time: Coprocessor 累计等待耗时
       process_time: Coprocessor 累计执行耗时
+      process_time_tooltip: Coprocessor 累计执行耗时
       backoff_time: 累计重试等待耗时
       get_commit_ts_time: 取 Commit Ts 耗时
       get_commit_ts_time_tooltip: 从 PD 取递交时间戳（事务号）步骤的耗时
