--- a/ui/lib/apps/Overview/translations/en.yaml
+++ b/ui/lib/apps/Overview/translations/en.yaml
@@ -2,7 +2,8 @@ overview:
   nav_title: Overview
   top_statements:
     title: Top SQL Statements
-    more: More
+  recent_slow_query:
+    title: Recent Slow Queries
   monitor_alert:
     title: Monitor
     view_monitor: View Metrics
