--- a/ui/lib/apps/Overview/translations/zh-CN.yaml
+++ b/ui/lib/apps/Overview/translations/zh-CN.yaml
@@ -2,7 +2,8 @@ overview:
   nav_title: 概况
   top_statements:
     title: Top SQL 语句
-    more: 更多
+  recent_slow_query:
+    title: 最近的慢查询
   status:
     up: 正常
     abnormal: 异常
