--- a/ui/diagnoseReportApp/translations/zh-CN.yaml
+++ b/ui/diagnoseReportApp/translations/zh-CN.yaml
@@ -152,51 +152,51 @@ diagnosis:
         tikv_block_data_cache_hit: 数据块缓存命中率
         tikv_block_bloom_prefix_cache_hit: bloom_prefix 块缓存命中率
       comment:
-        tidb_query: sql 查询花费的时间，标签是"sql 类型"。
-        tidb_get_token(us): 会话获取令牌以执行 sql 查询所花费时间，标签是"实例"。
-        tidb_parse: 解析 SQL 所花费时间，标签是"sql 类型"。
-        tidb_compile: 构建查询计划的时间，标签是"sql 类型"。
-        tidb_execute: 执行 SQL 的时间，不包括获得查询结果的时间，标签是"sql 类型"。
-        tidb_distsql_execution: 执行 distsql 所花费的时间，标签是"类型"。
-        tidb_cop: KV storage Coprocessor 处理所花费的时间，标签是"实例"。
-        tidb_transaction: 事务执行 durations 的时间成本，包括重试，标签是"sql 类型"。
+        tidb_query: SQL 查询耗时，标签是"SQL 类型"。
+        tidb_get_token(us): 会话获取令牌以执行 SQL 查询的耗时，标签是"实例"。
+        tidb_parse: 解析 SQL 的耗时，标签是"SQL 类型"。
+        tidb_compile: 构建查询计划的时间，标签是"SQL 类型"。
+        tidb_execute: 执行 SQL 的时间，不包括获得查询结果的时间，标签是"SQL 类型"。
+        tidb_distsql_execution: 执行 distsql 的耗时，标签是"类型"。
+        tidb_cop: KV storage Coprocessor 处理的耗时，标签是"实例"。
+        tidb_transaction: 事务执行 durations 的时间成本，包括重试，标签是"SQL 类型"。
         tidb_transaction_local_latch_wait: 事务执行时本地锁占用的时间，标签是"实例"。
         tidb_kv_backoff: TiDB 事务锁等待键值存储的时间，标签是"类型"。
-        tidb_kv_request: KV 请求 durations 所花费的时间，标签是"类型"。
+        tidb_kv_request: KV 请求 durations 的耗时，标签是"类型"。
         tidb_slow_query: TiDB 慢查询的时间开销，标签是"实例"。
-        tidb_slow_query_cop_process: TiDB的慢查询总 cop 处理所花费的时间，标签是"实例"。
+        tidb_slow_query_cop_process: TiDB 的慢查询总 cop 处理的耗时，标签是"实例"。
         tidb_slow_query_cop_wait: TiDB 的慢查询总 cop 的等待时间，标签是"实例"。
-        tidb_ddl_handle_job: 处理 TiDB DDL 任务所花费的时间，标签是"类型"。
-        tidb_ddl_worker: DDL worker 处理任务的所花费时间，标签是"实例"。
-        tidb_ddl_update_self_version: TiDB schema 同步器版本更新所花费的时间，标签是"结果"。
-        tidb_owner_handle_syncer: 在 etcd 上执行 TiDB DDL 所有者操作所花费的时间，标签是"类型"。
-        tidb_ddl_batch_add_index: TiDB 批量添加索引所花费的时间，标签是"类型"。
-        tidb_ddl_deploy_syncer: TiDB ddl schema 同步器统计的时间成本，包括init、start、watch、clear，标签是"类型"。
+        tidb_ddl_handle_job: 处理 TiDB DDL 任务的耗时，标签是"类型"。
+        tidb_ddl_worker: DDL worker 处理任务的耗时，标签是"实例"。
+        tidb_ddl_update_self_version: TiDB schema 同步器版本更新的耗时，标签是"结果"。
+        tidb_owner_handle_syncer: 在 etcd 上执行 TiDB DDL 所有者操作的耗时，标签是"类型"。
+        tidb_ddl_batch_add_index: TiDB 批量添加索引的耗时，标签是"类型"。
+        tidb_ddl_deploy_syncer: TiDB DDL schema 同步器统计的时间成本，包括 init、start、watch、clear，标签是"类型"。
         tidb_load_schema: 加载 TiDB schema 的时间成本，标签是"类型"。
-        tidb_meta_operation: TiDB 元操作的时间成本，包括 get/set 模式和 ddl 作业，标签是"实例"。
-        tidb_auto_id_request: TiDB 自增 id 处理id请求所花费的时间，标签是"类型"。
-        tidb_statistics_auto_analyze: 自动分析 TiDB 所花费的时间，标签是"类型"。
-        tidb_gc: kv存储垃圾回收的时间，标签是"实例"。
-        tidb_gc_push_task: KV 存储范围内 worker 处理一项任务所花费的时间，标签是"实例"。
-        tidb_batch_client_unavailable: KV 存储批量处理不可用所占的时间，标签是"类型"。
-        tidb_batch_client_wait: TiDB KV 存储批量客户端等待请求所花费的时间，标签是"实例"。
-        pd_start_tso_wait: 等待获取开始时间戳 oracle 所花费的时间，标签是"实例"。
-        pd_tso_rpc: 发送TSO请求直到收到响应的时间，标签是"实例"。
-        pd_tso_wait: 客户端开始等待TS直到收到TS结果所花费的时间，标签是"实例"。
-        pd_client_cmd: PD 客户端命令所花费的时间，标签是"类型"。
-        pd_handle_request: pd处理请求所花费的时间，标签是"类型"。
-        pd_grpc_completed_commands: The time cost of PD completing each kind of gRPC commands，标签是"gRPC 方法"。
-        pd_operator_finish: PD 完成各种 gRPC 命令的时间，标签是"类型"。
-        pd_operator_step_finish: PD 完成操作步骤所花费的时间，标签是"类型"。
-        pd_handle_transactions: PD 处理 etcd 事务所花费的时间，标签是"结果"。
-        pd_region_heartbeat: 每个 TiKV 实例中心跳所花费的时间，标签是"服务地址"。
-        etcd_wal_fsync: etcd 将 WAL 写入持久存储器所花费的时间，标签是"实例"。
+        tidb_meta_operation: TiDB 元操作的时间成本，包括 get/set 模式和 DDL 作业，标签是"实例"。
+        tidb_auto_id_request: TiDB 自增 ID 处理 ID 请求的耗时，标签是"类型"。
+        tidb_statistics_auto_analyze: 自动分析 TiDB 的耗时，标签是"类型"。
+        tidb_gc: KV 存储垃圾回收的时间，标签是"实例"。
+        tidb_gc_push_task: KV 存储范围内 worker 处理一项任务的耗时，标签是"实例"。
+        tidb_batch_client_unavailable: KV 存储批量处理不可用的耗时，标签是"类型"。
+        tidb_batch_client_wait: KV 存储批量处理客户端等待请求的耗时，标签是"实例"。
+        pd_start_tso_wait: 等待获取开始时间戳 timestamp 的耗时，标签是"实例"。
+        pd_tso_rpc: 发送 TSO 请求直到收到响应的时间，标签是"实例"。
+        pd_tso_wait: 客户端开始等待 timestamp 直到收到 timestamp 结果的耗时，标签是"实例"。
+        pd_client_cmd: PD 客户端命令的耗时，标签是"类型"。
+        pd_handle_request: PD 处理请求的耗时，标签是"类型"。
+        pd_grpc_completed_commands: PD 完成各种 gRPC 命令的耗时，标签是"gRPC 方法"。
+        pd_operator_finish: PD 完成各种 gRPC 命令的耗时，标签是"类型"。
+        pd_operator_step_finish: PD 完成操作步骤的耗时，标签是"类型"。
+        pd_handle_transactions: PD 处理 etcd 事务的耗时，标签是"结果"。
+        pd_region_heartbeat: 每个 TiKV 实例中心跳的耗时，标签是"服务地址"。
+        etcd_wal_fsync: etcd 将 WAL 写入持久存储器的耗时，标签是"实例"。
         pd_peer_round_trip: 网络的延迟，标签是"实例"。
-        tikv_grpc_messge: gRPC 报文的 TiKV 句柄所花费的时间，标签是"类型"。
+        tikv_grpc_messge: gRPC 报文的 TiKV 句柄的耗时，标签是"类型"。
         tikv_cop_request: Coprocessor 处理读请求的时间开销，标签是"请求"。
         tikv_cop_handle: 处理 Coprocessor 请求的时间开销，标签是"请求"。
-        tikv_cop_wait: Coprocessor 请求等待处理所花费的时间，标签是"请求"。
-        tikv_scheduler_command: 执行 commit 命令所花费的时间，标签是"类型"。
+        tikv_cop_wait: Coprocessor 请求等待处理的耗时，标签是"请求"。
+        tikv_scheduler_command: 执行 commit 命令的耗时，标签是"类型"。
         tikv_scheduler_latch_wait: 提交命令中 TiKV 锁存器等待的时间开销，标签是"类型"。
         tikv_handle_snapshot: 处理快照的时间开销，标签是"类型"。
         tikv_send_snapshot: 发送快照的时间开销，标签是"实例"。
@@ -206,99 +206,99 @@ diagnosis:
         tikv_raft_apply_wait: Raft apply wait 的时间开销，标签是"实例"。
         tikv_raft_process: Peer processes in Raft 的时间开销，标签是"实例"。
         tikv_raft_propose_wait: 每一个 Raft 提议的等待时间，标签是"类型"。
-        tikv_raft_store_events: raftstore events 的时间开销，标签是"类型"。
+        tikv_raft_store_events: RaftStore events 的时间开销，标签是"类型"。
         tikv_commit_log: Raft 提交日志的时间开销，标签是"实例"。
-        tikv_check_split: 运行分割检查所花费的时间，标签是"实例"。
-        tikv_ingest_sst: Ingest SST 文件所花费的时间，标签是"实例"。
-        tikv_gc_tasks: 执行GC任务所花费的时间，标签是"任务"。
-        tikv_pd_request: TiKV 向 PD 发送请求所花费的时间，标签是"类型"。
+        tikv_check_split: 运行分割检查的耗时，标签是"实例"。
+        tikv_ingest_sst: Ingest SST 文件的耗时，标签是"实例"。
+        tikv_gc_tasks: 执行 GC 任务的耗时，标签是"任务"。
+        tikv_pd_request: TiKV 向 PD 发送请求的耗时，标签是"类型"。
         tikv_lock_manager_deadlock_detect:
         tikv_lock_manager_waiter_lifetime:
         tikv_backup_range:
         tikv_backup:
-        tidb_transaction_retry_num: TiDB 事务重试 次数，标签是"实例"。
-        tidb_transaction_statement_num: 一个事务中 TiDB 语句数的总数。Internal 是指 TiDB 内部事务，标签是"实例"。
-        tidb_txn_region_num: 每个事务进行操作的区域数，标签是"实例"。
-        tidb_txn_kv_write_num: 每个事务执行的 KV 写入数，标签是"实例"。
+        tidb_transaction_retry_num: TiDB 事务重试次数，标签是"实例"。
+        tidb_transaction_statement_num: 一个事务中 TiDB 语句数的总数量。Internal 是指 TiDB 内部事务，标签是"实例"。
+        tidb_txn_region_num: 每个事务进行操作的区域数量，标签是"实例"。
+        tidb_txn_kv_write_num: 每个事务执行的 KV 写入数量，标签是"实例"。
         tidb_txn_kv_write_size: 每个事务执行的 KV 写入大小，标签是"实例"。
         tidb_load_safepoint_total_num: 安全点装载总数量，标签是"实例"。
-        tidb_lock_resolver_total_num: lock resolve 的总数，标签是"实例"。
-        pseudo_estimation_total_count: 使用伪估计的 TiDB 优化器的总数，标签是"实例"，"类型"。
-        dump_feedback_total_count: TiDB 转储统计数据回 KV 存储的操作总数，标签是"实例"。
-        store_query_feedback_total_count: TiDB 存储 quering 反馈的总数，标签是"实例"。
-        update_stats_total_count: 使用反馈更新统计数据的 TiDB 总数，标签是"实例"。
-        blance-leader-in: Leader 移动到 TiKV 存储的总数，标签是"实例"。
-        blance-leader-out: Leader 移出 TiKV 存储的总数，标签是"实例"。
-        blance-region-in: 移动到 TiKV 存储的 Region 总数，标签是"实例"。
-        blance-region-out: 移出 TiKV 存储的的 Region 总数，标签是"实例"。
+        tidb_lock_resolver_total_num: lock resolve 的总数量，标签是"实例"。
+        pseudo_estimation_total_count: 使用伪估计的 TiDB 优化器的总数量，标签是"实例"，"类型"。
+        dump_feedback_total_count: TiDB 转储统计数据回 KV 存储的操作总数量，标签是"实例"。
+        store_query_feedback_total_count: TiDB 存储查询反馈的总数量，标签是"实例"。
+        update_stats_total_count: 使用反馈更新统计数据的 TiDB 总数量，标签是"实例"。
+        blance-leader-in: Leader 移动到 TiKV 存储的总数量，标签是"实例"。
+        blance-leader-out: Leader 移出 TiKV 存储的总数量，标签是"实例"。
+        blance-region-in: 移动到 TiKV 存储的 Region 总数量，标签是"实例"。
+        blance-region-out: 移出 TiKV 存储的的 Region 总数量，标签是"实例"。
         Approximate Region size: 近似 Region 大小，标签是"实例"。
         store size: 存储大小，标签是"实例"。
-        tikv_scheduler_keys_read: 由一条命令读取的键数，标签是"实例"，"类型"。
-        tikv_scheduler_keys_written: 由一条命令写入的键数，标签是"实例"，"类型"。
-        tikv_scheduler_scan_details_total_num: 在一条执行命令时，扫描每个 CF 的详细信息的总数，标签是"实例"。
-        tikv_scheduler_stage_total_num: 调度程序状态的总数，标签是"实例"，"阶段"，"类型"。
-        tikv_gc_keys_total_num: GC期间CF中受影响的键的总数，标签是"实例"。
+        tikv_scheduler_keys_read: 由一条命令读取的键数量，标签是"实例"，"类型"。
+        tikv_scheduler_keys_written: 由一条命令写入的键数量，标签是"实例"，"类型"。
+        tikv_scheduler_scan_details_total_num: 在执行一条命令时，扫描每个 CF 的详细信息的总数量，标签是"实例"。
+        tikv_scheduler_stage_total_num: 调度程序状态的总数量，标签是"实例"，"阶段"，"类型"。
+        tikv_gc_keys_total_num: GC 期间 CF 中受影响的键的总数量，标签是"实例"。
         tidb_gc_worker_action_total_num: KV 存储垃圾回收总量，标签是"实例"，"类型"。
-        tikv_worker_handled_tasks_total_num: worker 处理的任务总数，标签是"实例"。
-        tikv_worker_pending_tasks_total_num: 工作进程的挂起和运行任务的总数，标签是"实例"。
-        tikv_futurepool_handled_tasks_total_num: future_pool 处理的任务总数，标签是"实例"。
+        tikv_worker_handled_tasks_total_num: worker 处理的任务总数量，标签是"实例"。
+        tikv_worker_pending_tasks_total_num: 工作进程的挂起和运行任务的总数量，标签是"实例"。
+        tikv_futurepool_handled_tasks_total_num: future_pool 处理的任务总数量，标签是"实例"。
         tikv_futurepool_pending_tasks_total_num: future_pool 的总挂起和运行任务，标签是"实例"。
         tikv_snapshot_kv_count: tikv_snapshot_kv_count，标签是"实例"。
-        tikv_snapshot_size: 快照内 KV 的计数，标签是"实例"。
+        tikv_snapshot_size: 快照内 KV 的数量，标签是"实例"。
         tikv_snapshot_state_total_count: TiKV 的快照大小，标签是"实例"，"类型"。
-        tikv_cop_scan_keys_num: TiKV Coprocessor 扫描键总数，标签是"实例"。
+        tikv_cop_scan_keys_num: TiKV Coprocessor 扫描键总数量，标签是"实例"。
         tikv_cop_total_response_total_size: TiKV Coprocessor 响应总大小，标签是"实例"。
-        tikv_cop_scan_num: TiKV Coprocessor 扫描操作总数，标签是"实例"。
-        tikv_raft_sent_messages_total_num: 发送的 Raft 消息的总数，标签是"实例"，"类型"。
-        tikv_flush_messages_total_num: Raft 上刷新了的信息总数，标签是"实例"。
-        tikv_receive_messages_total_num: Raft 收到的的信息总数，标签是"实例"。
-        tikv_raft_dropped_messages_total: Raft 丢掉的的信息总数，标签是"实例"，"类型"。
-        tikv_raft_proposals_total_num: Raft 提议的的总数，标签是"实例"，"类型"。
-        tikv_grpc_error_total_count: gRPC 消息失败的总数，标签是"实例"，"类型"。
+        tikv_cop_scan_num: TiKV Coprocessor 扫描操作总数量，标签是"实例"。
+        tikv_raft_sent_messages_total_num: 发送的 Raft 消息的总数量，标签是"实例"，"类型"。
+        tikv_flush_messages_total_num: Raft 上刷新了的信息总数量，标签是"实例"。
+        tikv_receive_messages_total_num: Raft 收到的的信息总数量，标签是"实例"。
+        tikv_raft_dropped_messages_total: Raft 丢掉的的信息总数量，标签是"实例"，"类型"。
+        tikv_raft_proposals_total_num: Raft 提议的的总数量，标签是"实例"，"类型"。
+        tikv_grpc_error_total_count: gRPC 消息失败的总数量，标签是"实例"，"类型"。
         tikv_critical_error_total_count: TiKV 临界误差的总数量，标签是"实例"，"类型"。
-        tikv_scheduler_is_busy_total_count: 使 TiKV 实例暂时不可用的调度器繁忙事件的总数，标签是"实例"。
-        tikv_channel_full_total_count: 通道完全错误的总数，它将使 TiKV 实例暂时不可用，标签是"实例"。
-        tikv_Coprocessor_request_error_total_count: Coprocessor错误的总数，标签是"实例"，"原因"。
+        tikv_scheduler_is_busy_total_count: 使 TiKV 实例暂时不可用的调度器繁忙事件的总数量，标签是"实例"。
+        tikv_channel_full_total_count: 通道完全错误的总数量，它将使 TiKV 实例暂时不可用，标签是"实例"。
+        tikv_Coprocessor_request_error_total_count: Coprocessor 错误的总数量，标签是"实例"，"原因"。
         tikv_engine_write_stall: 指示使 TiKV 实例暂时不可用的写失速事件，标签是"实例"。
-        tikv_server_report_failures_total_count: 报告失败消息的总数，标签是"实例"。
-        tikv_storage_async_request_error: 存储请求错误的总数，标签是"实例"，"状态"，"类型"。
+        tikv_server_report_failures_total_count: 报告失败消息的总数量，标签是"实例"。
+        tikv_storage_async_request_error: 存储请求错误的总数量，标签是"实例"，"状态"，"类型"。
         tikv_lock_manager_detect_error_total_count: TiKV 锁管理器检测错误的总数量，标签是"实例"，"类型"。
         tikv_backup_errors_total_count: TiKV 锁管理的总错误，标签是"实例"，"错误"。
         node_disk_write_latency: 每个节点的磁盘写延迟，标签是"实例"，"设备"。
         node_disk_read_latency: 每个节点的磁盘读取延迟，标签是"实例"，"设备"。
-        grpc: 每个TiKV grpc 的 CPU 利用率，标签是"实例"。
-        raftstore: TiKV raftstore 线程的 CPU 利用率，标签是"实例"。
+        grpc: 每个 TiKV gRPC 的 CPU 利用率，标签是"实例"。
+        raftstore: TiKV RaftStore 线程的 CPU 利用率，标签是"实例"。
         Async apply: TiKV 异步应用线程的 CPU 利用率，标签是"实例"。
         sched_worker: TiKV 调度器工作线程的 CPU 利用率，标签是"实例"。
         snapshot: TiKV 快照的 CPU 利用率，标签是"实例"。
         unified read pool: TiKV 统一读池线程的 CPU 利用率，标签是"实例"。
-        storage read pool: TiKV存储读池线程的 CPU 利用率，标签是"实例"。
+        storage read pool: TiKV 存储读池线程的 CPU 利用率，标签是"实例"。
         storage read pool normal: TiKV 存储读池普通线程的 CPU 利用率，标签是"实例"。
         storage read pool high: TiKV 存储较高读线程的 CPU 利用率，标签是"实例"。
         storage read pool low: TiKV 存储较低读线程的 CPU 利用率，标签是"实例"。
-        cop: TiKV coporssesor 的 CPU 利用率，标签是"实例"。
-        cop normal: TiKV coporssesor 普通线程的 CPU 利用率，标签是"实例"。
-        cop high: TiKV coporssesor 高线程的 CPU 利用率，标签是"实例"。
-        cop low: TiKV coporssesor 低线程的 CPU 利用率，标签是"实例"。
-        rocksdb: TiKV rocksdb 的 CPU 利用率，标签是"实例"。
-        gc: TiKV gc 的 CPU 利用率，标签是"实例"。
+        cop: TiKV Coprocessor 的 CPU 利用率，标签是"实例"。
+        cop normal: TiKV Coprocessor 普通线程的 CPU 利用率，标签是"实例"。
+        cop high: TiKV Coprocessor 高线程的 CPU 利用率，标签是"实例"。
+        cop low: TiKV Coprocessor 低线程的 CPU 利用率，标签是"实例"。
+        rocksdb: TiKV RocksDB 的 CPU 利用率，标签是"实例"。
+        gc: TiKV GC 的 CPU 利用率，标签是"实例"。
         split_check: TiKV split_chec 的 CPU 利用率，标签是"实例"。
         region_score: store 的 Region 得分，标签是"服务地址"。
-        leader_score: store 的 leader 得分，标签是"服务地址"。
+        leader_score: store 的 Leader 得分，标签是"服务地址"。
         region_count: store 的 Region 数量，标签是"服务地址"。
-        leader_count: store 的 leader 数量，标签是"服务地址"。
+        leader_count: store 的 Leader 数量，标签是"服务地址"。
         region_size: store 的 Region 大小，标签是"服务地址"。
-        leader_size: store 的 leader 大小，标签是"服务地址"。
+        leader_size: store 的 Leader 大小，标签是"服务地址"。
         tikv_memtable_hit: memtable 的命中率，标签是"实例"。
         tikv_block_all_cache_hit: 所有块缓存的命中率，标签是"实例"。
         tikv_block_index_cache_hit: 索引块缓存的命中率，标签是"实例"。
         tikv_block_filter_cache_hit: 过滤块缓存的命中率，标签是"实例"。
         tikv_block_data_cache_hit: 数据块缓存的命中率，标签是"实例"。
         tikv_block_bloom_prefix_cache_hit: bloom_prefix 块缓存的命中率，标签是"实例"。
-        get duration: rocksdb 执行 get 操作时消耗的时间，标签是"实例"。
-        seek duration: 当 rocksdb 执行 seek 操作时所消耗的时间，标签是"实例"。
-        write duration: 当 rocksdb 执行写操作时所消耗的时间，标签是"实例"。
-        WAL sync duration: 当 rocksdb 执行 WAL 同步操作时所消耗的时间，标签是"实例"。
-        compaction duration: rocksdb 执行压缩操作时消耗的时间，标签是"实例"。
-        SST read duration: rocksdb 读取 SST 文件所花费的时间，标签是"实例"。
+        get duration: RocksDB 执行 get 操作的耗时，标签是"实例"。
+        seek duration: RocksDB 执行 seek 操作的耗时，标签是"实例"。
+        write duration: RocksDB 执行写操作的耗时，标签是"实例"。
+        WAL sync duration: RocksDB 执行 WAL 同步操作的耗时，标签是"实例"。
+        compaction duration: RocksDB 执行压缩操作的耗时，标签是"实例"。
+        SST read duration: RocksDB 读取 SST 文件的耗时，标签是"实例"。
         write stall duration: 由写停顿引起的时间，标签是"实例"。
