apply for slow query table as well, and fix a wrong usage about hooks

--- a/ui/lib/apps/SlowQuery/translations/en.yaml
+++ b/ui/lib/apps/SlowQuery/translations/en.yaml
@@ -67,7 +67,7 @@ slow_query:
       txn_retry: Transaction Retries
     status:
       success: Success
-      failed: Failed
+      error: Failed
   detail:
     head:
       title: Slow Query Detail
