--- a/ui/lib/apps/SlowQuery/translations/zh-CN.yaml
+++ b/ui/lib/apps/SlowQuery/translations/zh-CN.yaml
@@ -69,7 +69,7 @@ slow_query:
       txn_retry: 事务重试次数
     status:
       success: 成功
-      failed: 失败
+      error: 失败
   detail:
     head:
       title: 慢查询详情
