--- a/ui/lib/apps/KeyViz/translations/en.yaml
+++ b/ui/lib/apps/KeyViz/translations/en.yaml
@@ -26,6 +26,12 @@ keyviz:
     close_keyviz: Disable Key Visualizer Feature
     close_keyviz_warning: Are you sure want to disable this feature? Current visual reports will be cleared.
     switch: Enable
+    policy: Policy
+    policy_db: TiDB
+    policy_kv: Raw KV
+    separator: Separator
+    separator_placeholder: The separator used to split Key
+    separator_empty_warning: If left blank, Key will not be split
     actions:
       save: Save
       close: Close
