--- a/ui/lib/apps/KeyViz/translations/zh-CN.yaml
+++ b/ui/lib/apps/KeyViz/translations/zh-CN.yaml
@@ -26,6 +26,12 @@ keyviz:
     close_keyviz: 关闭热点可视化功能
     close_keyviz_warning: 确认要关闭该功能吗？关闭后现有历史记录也将被清空！
     switch: 总开关
+    policy: 模式
+    policy_db: TiDB
+    policy_kv: 原生 KV
+    separator: 分隔符
+    separator_placeholder: 用于切分 Key 的分隔符
+    separator_empty_warning: 分隔符为空串时，Key 将不会被切分
     actions:
       save: 保存
       close: 关闭
