--- a/ui/diagnoseReportApp/translations/en.yaml
+++ b/ui/diagnoseReportApp/translations/en.yaml
@@ -1,5 +1,5 @@
 diagnosis:
-  title: TiDB SQL Diagnosis System Report
+  title: TiDB Cluster Diagnostics Report
   expand_all: Expand All
   fold_all: Fold All
   expand: expand
