--- a/ui/diagnoseReportApp/translations/en.yaml
+++ b/ui/diagnoseReportApp/translations/en.yaml
@@ -49,10 +49,10 @@ diagnosis:
       tikv_raftstore_initial_config: TiKV RaftStore Initial Config
       tikv_raftstore_change_config: TiKV RaftStore Config Change History
       pd_time_consume: Time Consumed by PD Component
-      blance_leader_region: Blance Leader/Region
-      approximate_region_size: Approximate Region size
+      blance_leader_region: Scheduled Leader/Region Count
+      approximate_region_size: Approximate Region Size
       tikv_engine_size: TiKV Engine Size
-      tikv_time_consume: TiKV Time Consume
+      tikv_time_consume: Time Consumed by TiKV Component
       scheduler_info: Scheduler Info
       gc_info: GC Info
       task_info: Task Info
@@ -60,44 +60,44 @@ diagnosis:
       coprocessor_info: Coprocessor Info
       raft_info: Raft Info
       tikv_error: TiKV Error
-      tidb_current_config: TiDB Current Config
-      pd_current_config: PD Current Config
-      tikv_current_config: TiKV Current Config
-      node_load_info: Node Load Info
-      process_cpu_usage: Process CPU Usage
-      process_memory_usage: TProcess Memory Usage
+      tidb_current_config: TiDB's Current Config
+      pd_current_config: PD's Current Config
+      tikv_current_config: TiKV's Current Config
+      node_load_info: Server Load Info
+      process_cpu_usage: Instance CPU Usage
+      process_memory_usage: Instance Memory Usage
       tidb/pd_goroutines_count: TiDB/PD Goroutines Count
       tikv_thread_cpu_usage: TiKV Thread CPU Usage
       store_status: Store Status
       cluster_status: Cluster Status
-      etcd_status: Etcd Status
-      cluster_info: Cluster Info
+      etcd_status: etcd Status
+      cluster_info: Cluster Topology Info
       cache_hit: Cache Hit
-      cluster_hardware: Cluster Hardware
-      rocksdb_time_consume: RocksDB Time Consume
-      top_10_slow_query: Top 10 Slow Query
-      top_10_slow_query_group_by_digest: Top 10 Slow Query Group By Digest
-      slow_query_with_diff_plan: Slow Query With Diff Plan
+      cluster_hardware: Cluster Hardware Info
+      rocksdb_time_consume: Time Consumed by RocksDB
+      top_10_slow_query: Top 10 Slow Queries
+      top_10_slow_query_group_by_digest: Top 10 Slow Queries Group By Digest
+      slow_query_with_diff_plan: Slow Queries with Different Plan
     comment:
-      compare_diagnose: Automatically diagnose the cluster problem by compare with the refer time
-      max_diff_item: The max different metrics between 2 time range
-      diagnose: Automatically diagnose the cluster problem and record the problem in below table.
-      total_time_consume: The table contain the event time consume in TiDB/TiKV/PD. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type ...; TIME_RATIO is the TOTAL_TIME of this event devide by the TOTAL_TIME of upper event which TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile;
-      total_error: The table contain the total count of error event. METRIC_NAME is the error event name; LABEL is the event label, such as instance, event type ...; TOTAL_COUNT is the total count of this event;
-      tidb_time_consume: The table contain the event time consume in TiDB. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type ...; TIME_RATIO is the TOTAL_TIME of this event devide by the TOTAL_TIME of upper event which TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile;
-      transaction: The table contain the TiDB transaction statistics information. METRIC_NAME is the object name; LABEL is the object label, such as instance, event type ...; TOTAL_VALUE is the total size/value of this object; TOTAL_COUNT is the total count of this object; P999 is the max size/value of 0.999 quantile; P99 is the max size/value of 0.99 quantile; P90 is the max size/value of 0.90 quantile; P80 is the max size/value of 0.80 quantile;
-      tidb_connection_count: The connection count of tidb server.
-      ddl_owner: DDL Owner info. Attention, if no DDL request has been executed, below owner info maybe null, it doesn't indicate no DDL owner exists.
-      scheduler_initial_config: PD scheduler initial config value. The initial time is the report start time.
-      scheduler_change_config: PD scheduler config change history. APPROXIMATE_CHANGE_TIME is the minimum start effective time.
-      tidb_gc_initial_config: TiDB GC initial config value. The initial time is the report start time.
-      tidb_gc_change_config: TiDB GC config change history, APPROXIMATE_CHANGE_TIME is the minimum start effective time.
-      tikv_rocksdb_initial_config: TiKV RocksDB initial config value. The initial time is the report start time.
-      tikv_rocksdb_change_config: TiKV RocksDB config change history, APPROXIMATE_CHANGE_TIME is the minimum start effective time.
-      tikv_raftstore_initial_config: TiKV RaftStore initial config value. The initial time is the report start time.
-      tikv_raftstore_change_config: TiKV RaftStore config change history, APPROXIMATE_CHANGE_TIME is the minimum start effective time.
-      pd_time_consume: The table contain the event time consume in PD. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type ...; TIME_RATIO is the TOTAL_TIME of this event devide by the TOTAL_TIME of upper event which TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile;
-      tikv_time_consume: The table contain the event time consume in TiKV. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type ...; TIME_RATIO is the TOTAL_TIME of this event devide by the TOTAL_TIME of upper event which TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile;
+      compare_diagnose: Automatically diagnose the cluster problem by comparing with the reference time.
+      max_diff_item: The maximum different metrics between two time ranges.
+      diagnose: Automatically diagnose the cluster problem and record the problem in the table below.
+      total_time_consume: This table contains the event time consumed in TiDB/TiKV/PD. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type, etc; TIME_RATIO is the TOTAL_TIME of this event divided by the TOTAL_TIME of the events whose TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile.
+      total_error: This table contains the total count of each error event. METRIC_NAME is the error event name; LABEL is the event label, such as instance, event type, etc; TOTAL_COUNT is the total count of this event.
+      tidb_time_consume: This table contains the event time consumed in TiDB. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type, etc; TIME_RATIO is the TOTAL_TIME of this event divided by the TOTAL_TIME of the events whose TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile.
+      transaction: This table contains the TiDB transaction statistics information. METRIC_NAME is the object name; LABEL is the object label, such as instance, event type, etc; TOTAL_VALUE is the total size/value of this object; TOTAL_COUNT is the total count of this object; P999 is the max size/value of 0.999 quantile; P99 is the max size/value of 0.99 quantile; P90 is the max size/value of 0.90 quantile; P80 is the max size/value of 0.80 quantile.
+      tidb_connection_count: The number of connections of each TiDB server.
+      ddl_owner: This table contains the DDL Owner info. Note that if no DDL request has been executed, the Owner info maybe null below, but it doesn't indicate that no DDL Owner exists.
+      scheduler_initial_config: The initial config value of PD scheduler. The initial time is the start time of this report.
+      scheduler_change_config: The config change history of PD scheduler. APPROXIMATE_CHANGE_TIME is the minimum start effective time.
+      tidb_gc_initial_config: The initial config value of TiDB GC. The initial time is the start time of this report.
+      tidb_gc_change_config: The config change history of TiDB GC. APPROXIMATE_CHANGE_TIME is the minimum start effective time.
+      tikv_rocksdb_initial_config: The initial config value of TiKV RocksDB. The initial time is the start time of this report.
+      tikv_rocksdb_change_config: The config change history of TiKV RocksDB. APPROXIMATE_CHANGE_TIME is the minimum start effective time.
+      tikv_raftstore_initial_config: The initial config value of TiKV RaftStore. The initial time is the start time of this report.
+      tikv_raftstore_change_config: The config change history of TiKV RaftStore. APPROXIMATE_CHANGE_TIME is the minimum start effective time.
+      pd_time_consume: This table contains the event time consumed in PD. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type, etc; TIME_RATIO is the TOTAL_TIME of this event divided by the TOTAL_TIME of the events whose TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile.
+      tikv_time_consume: This table contains the event time consumed in TiKV. METRIC_NAME is the event name; LABEL is the event label, such as instance, event type, etc; TIME_RATIO is the TOTAL_TIME of this event divided by the TOTAL_TIME of the events whose TIME_RATIO is 1; TOTAL_TIME is the total time cost of this event; TOTAL_COUNT is the total count of this event; P999 is the max time of 0.999 quantile; P99 is the max time of 0.99 quantile; P90 is the max time of 0.90 quantile; P80 is the max time of 0.80 quantile.
     table:
       name:
         tidb_transaction: Transaction
