--- a/ui/lib/apps/InstanceProfiling/translations/en.yaml
+++ b/ui/lib/apps/InstanceProfiling/translations/en.yaml
@@ -16,7 +16,6 @@ instance_profiling:
         start_at: Start At
         duration: Duration (sec)
         status: Status
-        action: Action
       status:
         running: Running
         finished: Finished
@@ -35,3 +34,8 @@ instance_profiling:
         status: Status
       status:
         finished: Finished
+  common:
+    actions:
+      action: Action
+      view: View
+      download: Download
