--- a/ui/lib/apps/InstanceProfiling/translations/zh-CN.yaml
+++ b/ui/lib/apps/InstanceProfiling/translations/zh-CN.yaml
@@ -16,7 +16,6 @@ instance_profiling:
         start_at: 开始时间
         duration: 时长 (秒)
         status: 状态
-        action: 操作
       status:
         running: 分析中
         finished: 完成
@@ -35,3 +34,8 @@ instance_profiling:
         status: 状态
       status:
         finished: 完成
+  common:
+    actions:
+      action: 操作
+      view: 查看
+      download: 下载
