--- a/ui/lib/apps/KeyViz/translations/zh-CN.yaml
+++ b/ui/lib/apps/KeyViz/translations/zh-CN.yaml
@@ -1,5 +1,5 @@
 keyviz:
-  nav_title: 热点可视化
+  nav_title: 流量可视化
   toolbar:
     brightness: 调整亮度
     zoom:
@@ -20,10 +20,10 @@ keyviz:
     disabled_result:
       title: 该功能未启用
       sub_title: |
-        热点可视化功能未启用，因此无法查看可视化报告。
+        流量可视化功能未启用，因此无法查看可视化报告。
         您可以修改设置打开该功能后等待新数据收集。
     open_setting: 打开设置
-    close_keyviz: 关闭热点可视化功能
+    close_keyviz: 关闭流量可视化功能
     close_keyviz_warning: 确认要关闭该功能吗？关闭后现有历史记录也将被清空！
     switch: 总开关
     policy: 模式
