--- a/ui/lib/apps/Overview/translations/zh-CN.yaml
+++ b/ui/lib/apps/Overview/translations/zh-CN.yaml
@@ -5,9 +5,7 @@ overview:
   recent_slow_query:
     title: 最近的慢查询
   status:
-    up: 正常
-    abnormal: 异常
-    nodes: '{{nodeType}} 节点'
+    title: 在线实例
   monitor_alert:
     title: 监控告警
     view_monitor: 查看监控
@@ -19,10 +17,3 @@ overview:
   metrics:
     total_requests: QPS
     latency: 延迟
-  nodes:
-    title: 节点
-    component:
-      tidb: TiDB
-      tikv: TiKV
-      pd: PD
-      tiflash: TiFlash
