--- a/ui/diagnoseReportApp/translations/en.yaml
+++ b/ui/diagnoseReportApp/translations/en.yaml
@@ -49,7 +49,7 @@ diagnosis:
       tikv_raftstore_initial_config: TiKV RaftStore Initial Config
       tikv_raftstore_change_config: TiKV RaftStore Change Config
       pd_time_consume: PD Time Consume
-      blance_leader_region: Blance Leader/Region
+      balance_leader_region: Blance Leader/Region
       approximate_region_size: Approximate Region size
       tikv_engine_size: TiKV Engine Size
       tikv_time_consume: TiKV Time Consume
