--- a/ui/diagnoseReportApp/translations/zh-CN.yaml
+++ b/ui/diagnoseReportApp/translations/zh-CN.yaml
@@ -49,7 +49,7 @@ diagnosis:
       tikv_raftstore_initial_config: TiKV RaftStore 初始配置
       tikv_raftstore_change_config: TiKV RaftStore 配置修改历史
       pd_time_consume: PD 中事件耗时
-      blance_leader_region: Leader/Region 调度数
+      balance_leader_region: Leader/Region 调度数
       approximate_region_size: Approximate Region 大小
       tikv_engine_size: TiKV 实例存储大小
       tikv_time_consume: TiKV 中事件耗时
