--- a/ui/lib/apps/ClusterInfo/translations/en.yaml
+++ b/ui/lib/apps/ClusterInfo/translations/en.yaml
@@ -4,7 +4,7 @@ cluster_info:
     instance_table:
       title: Instances
       columns:
-        node: Node
+        node: Address
         version: Version
         status: Status
         up_time: Up Time
