--- a/ui/lib/apps/Overview/translations/zh-CN.yaml
+++ b/ui/lib/apps/Overview/translations/zh-CN.yaml
@@ -9,7 +9,7 @@ overview:
     abnormal: 异常
     nodes: '{{nodeType}} 节点'
   monitor_alert:
-    title: 监控告警
+    title: 监控和告警
     view_monitor: 查看监控
     view_monitor_warn: 监控不可用
     view_alerts: '查看 {{alertCount}} 条告警'
@@ -19,8 +19,8 @@ overview:
   metrics:
     total_requests: QPS
     latency: 延迟
-  nodes:
-    title: 节点
+  instances:
+    title: 实例
     component:
       tidb: TiDB
       tikv: TiKV
