--- a/ui/lib/apps/InstanceProfiling/translations/zh-CN.yaml
+++ b/ui/lib/apps/InstanceProfiling/translations/zh-CN.yaml
@@ -14,7 +14,7 @@ instance_profiling:
       columns:
         targets: 实例
         start_at: 开始时间
-        duration: 时长 (秒)
+        duration: 时长（秒）
         status: 状态
       status:
         running: 分析中
@@ -30,7 +30,7 @@ instance_profiling:
     table:
       columns:
         instance: 实例
-        kind: 类型
+        kind: 组件
         status: 状态
       status:
         finished: 完成
