--- a/ui/dashboardApp/layout/translations/en.yaml
+++ b/ui/dashboardApp/layout/translations/en.yaml
@@ -3,7 +3,7 @@ error:
     network: Network connection error
     unauthorized: Session is expired. Please sign in again.
   tidb:
-    no_alive_tidb: No alive TiDB instance in the cluster
+    no_alive_tidb: No live TiDB instance in the cluster
     pd_access_failed: Failed to access PD node
     tidb_conn_failed: Failed to connect to TiDB
     tidb_auth_failed: TiDB authentication failed
