--- a/ui/lib/apps/ClusterInfo/translations/en.yaml
+++ b/ui/lib/apps/ClusterInfo/translations/en.yaml
@@ -8,12 +8,12 @@ cluster_info:
         version: Version
         status: Status
         up_time: Up Time
-        deploy_path: Deploy Directory
+        deploy_path: Deployment Directory
         git_hash: Git Hash
       actions:
         hide_db:
           tooltip: Hide
-          confirm: Do you want to hide this TiDB node?
+          confirm: Do you want to hide this TiDB instance?
       status:
         up: Up
         down: Down
