--- a/ui/lib/apps/InstanceProfiling/translations/zh-CN.yaml
+++ b/ui/lib/apps/InstanceProfiling/translations/zh-CN.yaml
@@ -3,9 +3,8 @@ instance_profiling:
   list:
     control_form:
       title: 开始性能分析
-      nodes:
+      instances:
         label: 选择实例
-        placeholder: 请选择需要进行性能分析的目标实例
       duration:
         label: 分析时长
       submit: 开始分析
